--- a/web/App/View/saleanalysis/saleanalysis.addprice.html
+++ b/web/App/View/saleanalysis/saleanalysis.addprice.html
@@ -9,7 +9,7 @@
     <input type="hidden" name="analyId" value="<?=$analyId?>" />
 
     <label>价格区间：</label>
-    <input type="input" class="input input-sm" size="10" name="data1" value="<?=$info['data1']?>">W元
+    <input type="input" class="input input-sm" size="10" name="data1" value="<?=$info['data1']?>">
     &nbsp;&nbsp;&nbsp;&nbsp;
 
     <label>数据占比：</label>
