--- a/web/App/View/seo/seo.set.html
+++ b/web/App/View/seo/seo.set.html
@@ -27,7 +27,7 @@
     <tr>
         <td class="f-clearfix">
             <div class="fl">
-                <label for="tdi1" style="margin-top: -70px;">描&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;述:</label>
+                <label for="tdi1">描&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;述:</label>
                 <textarea name="seo_description" cols="72" rows="5"><?=$seoInfo['description']?></textarea>
                 <br/><p style="background-color:#FFFF99;margin-left: 54px;">注：建议描述文字不宜太长，最多不可超过100个中文。</p>
             </div>
