--- a/web/Static/1.2/css/main.css
+++ b/web/Static/1.2/css/main.css
@@ -215,7 +215,13 @@
     padding: 10px;
     background: #f5f5f5;
     border: solid 1px #ddd;
+    overflow: hidden;
 }
+.mj-screening-lf{
+    display: inline-block;
+    margin-top: 6px;
+}
+
 .mj-screening dl{
     padding-top: 10px;
 }
@@ -395,5 +401,8 @@
     display: block;
     color: #fc6f28;
     font-size: 12px;
+}
+.mj-a:hover{
+    text-decoration: none !important;
 }
 
